; ModuleID = '/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_rtree.c_rtree_child_node_read.c'
source_filename = "/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_rtree.c_rtree_child_node_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_8__* (i32*, i32*, %struct.TYPE_8__*, i32, i32)* @rtree_child_node_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_8__* @rtree_child_node_read(i32* %0, i32* %1, %struct.TYPE_8__* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_8__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_8__*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store %struct.TYPE_8__* %2, %struct.TYPE_8__** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %13 = load i32, i32* %10, align 4
  %14 = call %struct.TYPE_8__* @rtree_child_node_tryread(%struct.TYPE_8__* %12, i32 %13)
  store %struct.TYPE_8__* %14, %struct.TYPE_8__** %11, align 8
  %15 = load i32, i32* %10, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %33, label %17

17:                                               ; preds = %5
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %19 = call i32 @rtree_node_valid(%struct.TYPE_8__* %18)
  %20 = icmp ne i32 %19, 0
  %21 = xor i1 %20, true
  %22 = zext i1 %21 to i32
  %23 = call i64 @unlikely(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %33

25:                                               ; preds = %17
  %26 = load i32*, i32** %6, align 8
  %27 = load i32*, i32** %7, align 8
  %28 = load i32, i32* %9, align 4
  %29 = add i32 %28, 1
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %31 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %30, i32 0, i32 0
  %32 = call %struct.TYPE_8__* @rtree_node_init(i32* %26, i32* %27, i32 %29, i32* %31)
  store %struct.TYPE_8__* %32, %struct.TYPE_8__** %11, align 8
  br label %33

33:                                               ; preds = %25, %17, %5
  %34 = load i32, i32* %10, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %39

36:                                               ; preds = %33
  %37 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %38 = icmp ne %struct.TYPE_8__* %37, null
  br label %39

39:                                               ; preds = %36, %33
  %40 = phi i1 [ true, %33 ], [ %38, %36 ]
  %41 = zext i1 %40 to i32
  %42 = call i32 @assert(i32 %41)
  %43 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  ret %struct.TYPE_8__* %43
}

declare dso_local %struct.TYPE_8__* @rtree_child_node_tryread(%struct.TYPE_8__*, i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @rtree_node_valid(%struct.TYPE_8__*) #1

declare dso_local %struct.TYPE_8__* @rtree_node_init(i32*, i32*, i32, i32*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
